# wasm-merge-rs

./: .gitmodules  API.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
examples/: basic.rs
examples/with_wasm_opt/: Cargo.toml
examples/with_wasm_opt/src/: lib.rs  main.rs
src/: lib.rs  wasm-merge-main-shim.cpp
