[package]
name = "wasm-merge-sys"
version = "0.1.0"
description = "Native wasm-merge build (Rust bindings for Binaryen's wasm-merge)"
license = "MIT OR Apache-2.0"
edition = "2024"
documentation = "https://docs.rs/wasm-merge-sys"
repository = "https://github.com/yourusername/wasm-merge-rs"
readme = "README.md"
links = "binaryen"

[build-dependencies]
anyhow = "1.0.100"
cc = { version = "1.2.41", features = ["parallel"] }
cxx-build = "1.0.187"

[dependencies]
cxx = "1.0.187"

[features]
default = ["dwarf"]
dwarf = []
